#20 bug fixed for horizontal scrolling on mobile

--- a/public/stylesheets/htwplus.css
+++ b/public/stylesheets/htwplus.css
@@ -2,6 +2,11 @@
 
 /*============================== General ==============================*/
 
+html {
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
 body {
 	margin-top: 70px;
 	overflow-x: hidden;
